# EC2-Instance-Manager

./: .gitignore  CMakeLists.txt
include/: EC2InstanceManager.h  EC2Utils.h  mainwindow.h
src/: CMakeLists.txt  EC2InstanceManager.cpp  EC2Utils.cpp  mainwindow.cpp  mainwindow.ui
